update tutorial demo code

--- a/democode/index.html
+++ b/democode/index.html
@@ -16,9 +16,9 @@
   </header>
   <nav>
     <ul>
-      <li><a href="/about">Über mich</a></li>
-      <li><a href="/contact">Kontakt</a></li>
-      <li><a href="/impressum">Impressum</a></li>
+      <li><a href="/about" class="nav-link">Über mich</a></li>
+      <li><a href="/contact" class="nav-link">Kontakt</a></li>
+      <li><a href="/impressum" class="nav-link">Impressum</a></li>
     </ul>
   </nav>
   <main>
